--- a/LibraryManagementAPI/appsettings.json
+++ b/LibraryManagementAPI/appsettings.json
@@ -5,9 +5,6 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "DefaultConnection": ""
-  },
-  "AppOwner": ["adebortimothy@gmail.com",""]
+  "AllowedHosts": "*"
+
 }
